[project]
name = "bikkle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

[project.dependencies]
absl-py = "2.2.2"
annotated-types = "0.7.0"
attrs = "25.3.0"
certifi = "2025.4.26"
cffi = "1.17.1"
charset-normalizer = "3.4.2"
click = "8.1.8"
cloudpickle = "3.1.1"
contourpy = "1.3.2"
cycler = "0.12.1"
docker-pycreds = "0.4.0"
docstring-parser = "0.16"
etils = "1.12.2"
eyegestures = "3.2.4"
farama-notifications = "0.0.4"
filelock = "3.18.0"
flatbuffers = "25.2.10"
fonttools = "4.57.0"
fsspec = "2025.3.2"
gitdb = "4.0.12"
gitpython = "3.1.44"
glfw = "2.9.0"
grpcio = "1.71.0"
gymnasium = "1.1.1"
idna = "3.10"
imageio = "2.37.0"
importlib-metadata = "8.7.0"
importlib-resources = "6.5.2"
jax = "0.6.0"
jaxlib = "0.6.0"
jinja2 = "3.1.6"
joblib = "1.5.0"
kiwisolver = "1.4.8"
markdown = "3.8"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
matplotlib = "3.10.1"
mdurl = "0.1.2"
mediapipe = "0.10.21"
ml-dtypes = "0.5.1"
mpmath = "1.3.0"
mujoco = "3.3.2"
networkx = "3.4.2"
numpy = "1.26.4"
nvidia-cublas-cu12 = "12.8.3.14"
nvidia-cuda-cupti-cu12 = "12.8.57"
nvidia-cuda-nvrtc-cu12 = "12.8.61"
nvidia-cuda-runtime-cu12 = "12.8.57"
nvidia-cudnn-cu12 = "9.7.1.26"
nvidia-cufft-cu12 = "11.3.3.41"
nvidia-cufile-cu12 = "1.13.0.11"
nvidia-curand-cu12 = "10.3.9.55"
nvidia-cusolver-cu12 = "11.7.2.55"
nvidia-cusparse-cu12 = "12.5.7.53"
nvidia-cusparselt-cu12 = "0.6.3"
nvidia-nccl-cu12 = "2.26.2"
nvidia-nvjitlink-cu12 = "12.8.61"
nvidia-nvtx-cu12 = "12.8.55"
opencv-contrib-python = "4.11.0.86"
opencv-python = "4.11.0.86"
opt-einsum = "3.4.0"
orjson = "3.10.18"
packaging = "25.0"
pandas = "2.2.3"
pillow = "11.2.1"
pip = "25.1.1"
platformdirs = "4.3.7"
protobuf = "4.25.7"
psutil = "7.0.0"
pycparser = "2.22"
pydantic = "2.11.4"
pydantic-core = "2.33.2"
pygame = "2.6.1"
pygments = "2.19.1"
pyopengl = "3.1.9"
pyparsing = "3.2.3"
python-dateutil = "2.9.0.post0"
pytz = "2025.2"
pyyaml = "6.0.2"
requests = "2.32.3"
rich = "14.0.0"
scikit-learn = "1.6.1"
scipy = "1.15.3"
sentencepiece = "0.2.0"
sentry-sdk = "2.27.0"
setproctitle = "1.3.6"
setuptools = "80.3.0"
shtab = "1.7.2"
six = "1.17.0"
smmap = "5.0.2"
sounddevice = "0.5.1"
stable-baselines3 = "2.6.0"
sympy = "1.14.0"
tensorboard = "2.19.0"
tensorboard-data-server = "0.7.2"
tensordict = "0.8.1"
threadpoolctl = "3.6.0"
torch = "2.7.0+cu128"
torchrl = "0.8.0"
tqdm = "4.67.1"
triton = "3.3.0"
typeguard = "4.4.2"
typing-extensions = "4.13.2"
typing-inspection = "0.4.0"
tyro = "0.9.19"
tzdata = "2025.2"
urllib3 = "2.4.0"
wandb = "0.19.10"
werkzeug = "3.1.3"
zipp = "3.21.0"